11/09/2021 Update: - Overflow fix

--- a/JB_ResumeCSS.css
+++ b/JB_ResumeCSS.css
@@ -1,6 +1,7 @@
 body {
     color: #fff;
     background-color: #444;
+    overflow: hidden;
 }
 h2 {
     font-size: 16px;
